# ComputerGraphicsNote

./: README.md
OGL/: README.md
OGL/OGL1.1/: main.cpp
OGL/OGL1.1.0/: CMakeLists.txt
OGL/OGL1.1.0/include/glad/: glad.h
OGL/OGL1.2.0/: main.cpp
OGL/OGL1.2.1/: main.cpp
OGL/OGL1.2.1A/: CMakeLists.txt
OGL/OGL1.2.1A/src/: glad.c
OGL/OGL1.2.1B/: CMakeLists.txt  main.cpp
OGL/OGL1.2.1B/include/GLFW/: glfw3.h
OGL/OGL1.2.1B/include/KHR/: khrplatform.h
OGL/OGL1.2.1B/include/glm/: common.hpp  exponential.hpp  geometric.hpp  glm.hpp  integer.hpp  matrix.hpp  packing.hpp  trigonometric.hpp  vector_relational.hpp
OGL/OGL1.2.1B/include/glm/detail/: setup.hpp
OGL/OGL1.2.1B/include/glm/ext/: scalar_int_sized.hpp  scalar_uint_sized.hpp  vector_int2_sized.hpp  vector_int3_sized.hpp  vector_int4_sized.hpp  vector_uint2_sized.hpp  vector_uint3_sized.hpp  vector_uint4_sized.hpp
OGL/OGL1.2.1B/shader/: Shader.hpp
